# PolyParty

./: .coverage  .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/poly_party/: config.py  db.py  db_initialization.py  main.py  models.py  security.py
backend/poly_party/api/: auth.py  events.py  users.py
backend/tests/: test_events.py
frontend/: Dockerfile  README.md  openapi-ts.config.ts  package.json  tailwind.config.cjs
frontend/src/: app.css  app.html  conts.ts
frontend/src/client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
frontend/src/lib/components/: BetDialog.svelte  CreateEvent.svelte  EventTable.svelte  GenericDialog.svelte  LeaderboardTable.svelte  UserIcon.svelte  UserSettings.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/debug/: +page.svelte
frontend/src/routes/event/[id]/: +page.svelte
frontend/src/routes/home/: +page.svelte  page copy.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/user/: +page.svelte
