[project]
name = "polyparty-backend"
version = "0.1.0"
description = "It's like polymarket + jackbox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.3",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
]
