[project]
name = "polyparty-backend"
version = "0.1.0"
description = "It's like polymarket + jackbox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.3",
    "httpx>=0.28.1",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
